--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ header nav a.activo{
         font-size: 16px;
         min-height: 40.62em;
         color: #fff;
-        background: linear-gradient(rgba(0, 0, 0, .50) 0%, rgba(0, 0, 0, .50) 100%), url(/assets/img/Portada.jpg);
+        background: linear-gradient(rgba(0, 0, 0, .50) 0%, rgba(0, 0, 0, .50) 100%), url(assets/img/Portada.jpg);
         background-position-y: top;
         background-size: cover;
         margin-bottom: 2rem;
